<?xml version="2.0"?>
<package format="2">
  <name>tiago_controller</name>
  <version>0.1.0</version>
  <description>The tiago_controller package</description>

  <maintainer email="jean-baptiste.mouret@inria.fr">Brice</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>robot_framework_msgs</build_depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>robot_framework_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/JointController_plugins.xml" />
  </export>
</package>
